# olDox222_RN

./: .gitignore  ORN_planejamento.md  README.md  activate.bat  adversario.py  cerebro_codex.pkl  cerebro_logos.pkl  cerebro_vencedor.pkl  chief_dossier_llm.xml  codex_gen.py  colors.conf  debug_crawler.py  debug_crawler2.py  debug_crawler3.py  debug_crawler4.py  debug_path.py  diag_zim.py  doxolang_lab.py  doxolang_pro.py  doxologic.py  inspect_chemistry_blob.py  install.py  main.py  oraculo.py  orn_activate.bat  orn_infer_profiler.py  orn_llama_deep_profiler.py  profiler_pretable.json  pyproject.toml  requirements.txt  test1.py  test_queue.py  test_zim.py  teste_rapido.py  treinar.py  vulcan_routing_bench.py
.doxoade_cache/: check_cache.json
data/: doxoade_atlas.json  seed_graph.json
docs/: OIA_CORE_ARCHITECTURE.md  PROTOCOLS.md  identity.md  manifesto.md  research_log.md  roadmap.md
engine/: __init__.py  __main__.py  cli.py
native/: build.bat  orn_llama_wrapper.c  orn_llama_wrapper.h  orn_optimizer.c  orn_optimizer.h  orn_varint.c  test.py
telemetry/: blackboard_session.json  direct_runtime.jsonl  probe_status.json  server_runtime.json
tests/: orn_analyze_events.py  orn_infer_profiler.py  orn_llama_deep_profiler.py  test_assembler_task_parts.py  test_benchmark_blackboard_and_crawler_guard.py  test_bridge.py  test_cli_tutorial_and_index.py  test_code_assembler.py  test_code_drawer.py  test_code_sandbox.py  test_concept_mapper.py  test_context_rotation_and_crawler_speed.py  test_cpu_affinity.py  test_executive_decompose.py  test_kv_cache_options.py  (+13 more)
(+173 files in other folders)
